smten/share/lib/Smten/Tests/ShouldFail/DupVar.smtn

module Smten.Tests.ShouldFail.DupVar where

-- Variable 'foo' is declared twice.
foo :: Bool
foo = True

bar :: Bool
bar = True

foo :: Bool
foo = False

